# repoforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/adr/: README.md
scripts/: nightly_agent.py
src/repoforge/: __init__.py  cli.py
src/repoforge/commands/: audit.py  scaffold.py  templates.py
src/repoforge/core/: ai.py  auditor.py  config.py  generator.py  templates.py
tests/: test_auditor.py  test_config.py  test_templates.py
